--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
 *{
     padding: 0%;
     margin: 0%;
-    background-color: #d9d2d2;
-    color:rgb(34, 32, 32);
+    background-color: #edefe7;
+    color:rgb(42, 41, 45);
+    font-family: 'Montserrat', sans-serif;
+}
+#hello-page{
+    margin-top: 3rem;
+    margin-left: 2.5rem;
+    padding: 10px;
+}
+#bio{
+    margin-top: 4rem;
+    margin-left: 3.5rem;
+    width: 25rem;
 }
