--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0%;
     margin: 0%;
     background-color: #edefe7;
-    color:rgb(42, 41, 45);
+    color:rgb(48, 47, 52);
     font-family: 'Montserrat', sans-serif;
 }
 #hello-page{
@@ -15,6 +15,48 @@
     margin-left: 3.5rem;
     width: 25rem;
 }
+
+#python-div{
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#interactive-map{
+    width: 20rem;
+    height: 15rem;
+    background-color: #a9a9a9;
+}
+
+#python-div::before {
+    content: "";
+}
+
+#python-div::after {
+    content: "";
+}
+
+#python-div img{
+    opacity: 0.4;
+    border-radius: 3.5%;
+    width: 20rem;
+    height: 15rem;
+}
+
+#python-div img:hover{
+    transition: ease-in-out 0.5s;
+    opacity: 0.8;
+    cursor:pointer;
+}
+
+#project-1-square{
+    height: 16rem;
+    width: 20rem;
+    border-radius: 3.5%;
+    background-color: #353a37;
+}
+
+
 #bio{
     margin-left: 3.5rem;
     margin-top: 5rem;
