--- a/style.css
+++ b/style.css
@@ -1,63 +1,28 @@
 *{
-    padding: 0%;
     margin: 0%;
-    background-color: #edefe7;
-    color:rgb(48, 47, 52);
-    font-family: 'Montserrat', sans-serif;
+    padding: 0%;
 }
-#hello-page{
-    margin-top: 3rem;
-    margin-left: 2.5rem;
-    padding: 10px;
+.wrapper{
+    background-color: #101529;
+    width: 100dvw;
+    height: 100dvh;
+    display: grid;
 }
-#short-intro{
-    margin-top: 4rem;
-    margin-left: 3.5rem;
-    width: 25rem;
+#icon{
+    align-self: center;
+    justify-self: center;
+    margin-bottom: 4rem;
+    cursor: pointer;
 }
-
-#python-div{
-    margin-top: 2rem;
-    display: flex;
-    justify-content: space-between;
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 44;
+    color: #f0f0f0;
+    font-size: 4rem;
 }
-
-#interactive-map{
-    width: 20rem;
-    height: 15rem;
-    background-color: #a9a9a9;
-}
-
-#python-div::before {
-    content: "";
-}
-
-#python-div::after {
-    content: "";
-}
-
-#python-div img{
-    opacity: 0.4;
-    border-radius: 3.5%;
-    width: 20rem;
-    height: 15rem;
-}
-
-#python-div img:hover{
-    transition: ease-in-out 0.5s;
-    opacity: 0.8;
-    cursor:pointer;
-}
-
-#project-1-square{
-    height: 16rem;
-    width: 20rem;
-    border-radius: 3.5%;
-    background-color: #353a37;
-}
-
-
-#bio{
-    margin-left: 3.5rem;
-    margin-top: 5rem;
+.material-symbols-outlined.active{
+    color: #f0f0f0
 }
